Align navigation layout and tighten index filters

--- a/certified.html
+++ b/certified.html
@@ -51,8 +51,12 @@
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
+    <div class="px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="mx-auto max-w-7xl">
+            <div data-include-nav data-active="certified" data-language="switcher"></div>
+        </div>
+    </div>
     <div class="max-w-4xl mx-auto p-4 md:p-8">
-        <div data-include-nav data-active="certified" data-language="switcher"></div>
 
         <header class="mb-6">
             <h1 class="text-4xl font-extrabold text-gray-800" data-i18n="certifiedPage.title">Pistacho 认证评分</h1>
