--- a/rate.html
+++ b/rate.html
@@ -84,9 +84,12 @@
     </style>
 </head>
 <body class="bg-gray-100 font-sans antialiased text-gray-800">
+    <div class="px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="mx-auto max-w-7xl">
+            <div data-include-nav data-active="rate" data-language="switcher"></div>
+        </div>
+    </div>
     <div id="app-container" class="max-w-4xl mx-auto p-4 md:p-8">
-        <!-- Navigation Bar -->
-        <div data-include-nav data-active="rate" data-language="switcher"></div>
         <!-- Header with Score Display -->
         <header class="mb-8 p-6 bg-indigo-700 text-white rounded-xl shadow-2xl">
              <div class="flex justify-between items-start">
