--- a/history.html
+++ b/history.html
@@ -60,8 +60,12 @@
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
+    <div class="px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="mx-auto max-w-7xl">
+            <div data-include-nav data-active="history" data-language="switcher"></div>
+        </div>
+    </div>
     <div class="max-w-4xl mx-auto p-4 md:p-8">
-        <div data-include-nav data-active="history" data-language="switcher"></div>
         <header class="mb-6">
             <h1 id="history-title" class="text-4xl font-extrabold text-gray-800" data-i18n="historyPage.title">我的评分</h1>
         </header>
