--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
     <div class="main-container max-w-7xl">
         <div data-include-nav data-active="index" data-language="flags"></div>
 
-        <div class="mb-6 bg-white p-4 rounded-lg shadow-sm flex flex-col md:flex-row gap-3 items-stretch md:items-center">
-            <input type="text" id="search-input" data-i18n="indexPage.searchPlaceholder" placeholder="搜索雪茄名称, 产地, 尺寸, 点评, 用户..." class="flex-grow p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 text-sm md:text-base">
-            <select id="sort-select" class="p-3 border border-gray-300 rounded-md w-full md:w-auto text-sm md:text-base">
+        <div class="mb-6 bg-white p-4 rounded-lg shadow-sm flex flex-wrap items-center gap-3">
+            <input type="text" id="search-input" data-i18n="indexPage.searchPlaceholder" placeholder="搜索雪茄名称, 产地, 尺寸, 点评, 用户..." class="flex-1 min-w-[200px] py-2 px-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500 text-sm">
+            <select id="sort-select" class="h-10 px-3 border border-gray-300 rounded-md text-sm flex-shrink-0">
                 <option value="latest" data-i18n="indexPage.sortLatest">最新发布</option>
                 <option value="highest" data-i18n="indexPage.sortHighest">评分最高</option>
                 <option value="lowest" data-i18n="indexPage.sortLowest">评分最低</option>
             </select>
-            <button onclick="applyFilters()" class="py-3 px-5 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition w-full md:w-auto text-sm md:text-base" data-i18n="common.apply">应用</button>
+            <button onclick="applyFilters()" class="h-10 px-4 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition text-sm flex-shrink-0" data-i18n="common.apply">应用</button>
         </div>
 
         <div id="ratings-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-3 md:gap-4">
