--- a/results.html
+++ b/results.html
@@ -137,6 +137,11 @@
     </style>
 </head>
 <body class="bg-gray-100 font-sans antialiased text-gray-800">
+    <div class="px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="mx-auto max-w-7xl">
+            <div data-include-nav data-active="history" data-language="switcher"></div>
+        </div>
+    </div>
     <div class="max-w-6xl mx-auto p-4 md:p-8 relative">
         <!-- Error Container -->
         <div id="error-container" class="hidden bg-red-100 p-6 rounded-lg shadow-lg text-red-700 font-medium"></div>
@@ -145,9 +150,6 @@
 
         <!-- Main Content (hidden initially) -->
         <div id="main-content" class="opacity-0">
-            <!-- Navigation Bar -->
-            <div data-include-nav data-active="history" data-language="switcher"></div>
-
             <!-- Main Layout: Image Gallery + Details -->
             <div class="flex flex-col md:flex-row gap-6 md:gap-8 mb-8">
                 <!-- Image Gallery -->
