--- a/history.html
+++ b/history.html
@@ -27,6 +27,28 @@
         }
     </script>
     <style>
+        .lang-button {
+            padding: 2px 8px;
+            margin: 0 2px;
+            border: 1px solid transparent;
+            border-radius: 9999px;
+            cursor: pointer;
+            font-size: 0.75rem;
+            font-weight: 600;
+            background-color: #f3f4f6;
+            color: #374151;
+            transition: all 0.2s ease;
+        }
+        .lang-button:hover {
+            background-color: #e5e7eb;
+        }
+        .lang-button.active {
+            background-color: #e0e7ff;
+            border-color: #a5b4fc;
+            color: #3730a3;
+            cursor: default;
+        }
+
         .rating-card:hover {
             transform: translateY(-1px);
             box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -62,7 +84,7 @@
 <body class="bg-gray-100 font-sans">
     <div class="px-4 sm:px-6 lg:px-8 pt-4">
         <div class="mx-auto max-w-7xl">
-            <div data-include-nav data-active="history" data-language="switcher"></div>
+            <div data-include-nav data-active="history" data-language="flags"></div>
         </div>
     </div>
     <div class="max-w-4xl mx-auto p-4 md:p-8">
@@ -130,23 +152,37 @@
             renderCommentParticipation(commentParticipationData);
         }
 
-        function setupLanguageSwitcher() {
-            const switcher = document.getElementById('language-switcher');
-            if (!switcher) return;
-            const currentLang = i18next.language.split('-')[0];
-            switcher.value = ['zh', 'en', 'es'].includes(currentLang) ? currentLang : 'zh';
+        function renderLanguageSwitcher() {
+            const container = document.getElementById('language-flags');
+            if (!container || !i18next.isInitialized) return;
+            container.innerHTML = '';
+            const languages = ['zh', 'en', 'es'];
+            const currentLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
 
-            switcher.addEventListener('change', async (e) => {
-                const newLang = e.target.value;
-                await i18next.changeLanguage(newLang);
-                updateContent();
-                // 重新渲染动态内容
-                await fetchAndRenderHistory(currentAuthUser); // 重载数据和UI
-                renderLoginStatus(currentAuthUser);
+            languages.forEach(lang => {
+                const button = document.createElement('button');
+                button.textContent = lang.toUpperCase();
+                button.className = `lang-button ${lang === currentLang ? 'active' : ''}`;
+                button.dataset.lang = lang;
+                button.onclick = async (e) => {
+                    const newLang = e.target.dataset.lang;
+                    const oldLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
+                    if (newLang === oldLang) return;
+                    try {
+                        await i18next.changeLanguage(newLang);
+                        updateContent();
+                        renderLanguageSwitcher();
+                        await fetchAndRenderHistory(currentAuthUser);
+                        renderLoginStatus(currentAuthUser);
+                    } catch (langErr) {
+                        console.error(`Failed to change language to ${newLang}:`, langErr);
+                    }
+                };
+                container.appendChild(button);
             });
         }
         document.addEventListener('navbar:loaded', () => {
-            setupLanguageSwitcher();
+            renderLanguageSwitcher();
             renderLoginStatus(currentAuthUser);
         });
 
@@ -721,7 +757,7 @@
              userRole = currentAuthUser?.db_role ?? 'guest';
 
              renderLoginStatus(currentAuthUser); // Render login *after* i18n
-             setupLanguageSwitcher(); // Setup switcher
+             renderLanguageSwitcher(); // Setup switcher
 
              await fetchAndRenderHistory(currentAuthUser); // Pass user object
 
