--- a/rate.html
+++ b/rate.html
@@ -27,6 +27,29 @@
         } else { console.warn('Tailwind object not found. Skipping config.'); }
     </script>
     <style>
+        /* Language switcher buttons */
+        .lang-button {
+            padding: 2px 8px;
+            margin: 0 2px;
+            border: 1px solid transparent;
+            border-radius: 9999px;
+            cursor: pointer;
+            font-size: 0.75rem;
+            font-weight: 600;
+            background-color: #f3f4f6;
+            color: #374151;
+            transition: all 0.2s ease;
+        }
+        .lang-button:hover {
+            background-color: #e5e7eb;
+        }
+        .lang-button.active {
+            background-color: #e0e7ff;
+            border-color: #a5b4fc;
+            color: #3730a3;
+            cursor: default;
+        }
+
         /* Tooltip style (if needed, otherwise remove) */
         .tooltip { position: relative; display: inline-block; }
         .tooltip .tooltiptext { visibility: hidden; width: 60px; background-color: #555; color: #fff; text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -30px; opacity: 0; transition: opacity 0.3s; font-size: 10px; }
@@ -86,7 +109,7 @@
 <body class="bg-gray-100 font-sans antialiased text-gray-800">
     <div class="px-4 sm:px-6 lg:px-8 pt-4">
         <div class="mx-auto max-w-7xl">
-            <div data-include-nav data-active="rate" data-language="switcher"></div>
+            <div data-include-nav data-active="rate" data-language="flags"></div>
         </div>
     </div>
     <div id="app-container" class="max-w-4xl mx-auto p-4 md:p-8">
@@ -261,24 +284,35 @@
             document.title = i18next.t(titleKey);
         }
 
-        function setupLanguageSwitcher() {
-            // Setup language dropdown functionality
-            const switcher = document.getElementById('language-switcher');
-            if (!switcher) return;
-            // Set initial value based on detected language
+        function renderLanguageSwitcher() {
+            const container = document.getElementById('language-flags');
+            if (!container || !i18next.isInitialized) return;
+            container.innerHTML = '';
+            const languages = ['zh', 'en', 'es'];
             const currentLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
-            switcher.value = ['zh', 'en', 'es'].includes(currentLang) ? currentLang : 'zh';
 
-            // Add event listener for language change
-            switcher.addEventListener('change', async (e) => {
-                const newLang = e.target.value;
-                await i18next.changeLanguage(newLang);
-                updateContent(); // Update all static text
-                // Re-render dynamic content that depends on translations
-                renderRatingView();
-                renderLoginStatus(currentAuthUser);
-                renderAdminLinks();
-                renderFlavorButtons(); // Re-render flavor buttons with new translations
+            languages.forEach(lang => {
+                const button = document.createElement('button');
+                button.textContent = lang.toUpperCase();
+                button.className = `lang-button ${lang === currentLang ? 'active' : ''}`;
+                button.dataset.lang = lang;
+                button.onclick = async (e) => {
+                    const newLang = e.target.dataset.lang;
+                    const oldLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
+                    if (newLang === oldLang) return;
+                    try {
+                        await i18next.changeLanguage(newLang);
+                        updateContent();
+                        renderLanguageSwitcher();
+                        renderRatingView();
+                        renderLoginStatus(currentAuthUser);
+                        renderAdminLinks();
+                        renderFlavorButtons();
+                    } catch (langErr) {
+                        console.error(`Failed to change language to ${newLang}:`, langErr);
+                    }
+                };
+                container.appendChild(button);
             });
         }
         // --- End i18n Functions ---
@@ -394,7 +428,7 @@
         }
 
         document.addEventListener('navbar:loaded', () => {
-            setupLanguageSwitcher();
+            renderLanguageSwitcher();
             renderLoginStatus(currentAuthUser);
         });
 
@@ -1091,7 +1125,7 @@
                  setUser(user); // Update global user state and UI
 
                  // 3. Setup UI Elements (language switcher, char counts, sortable images)
-                 setupLanguageSwitcher();
+                 renderLanguageSwitcher();
                  titleInput?.addEventListener('input', updateCharCounts); // Add listener if element exists
                  reviewTextarea?.addEventListener('input', updateCharCounts); // Add listener if element exists
                  updateCharCounts(); // Initial count update
