--- a/results.html
+++ b/results.html
@@ -25,6 +25,29 @@
          } else { console.warn('Tailwind object not found.'); }
     </script>
     <style>
+        /* Language switcher buttons */
+        .lang-button {
+            padding: 2px 8px;
+            margin: 0 2px;
+            border: 1px solid transparent;
+            border-radius: 9999px;
+            cursor: pointer;
+            font-size: 0.75rem;
+            font-weight: 600;
+            background-color: #f3f4f6;
+            color: #374151;
+            transition: all 0.2s ease;
+        }
+        .lang-button:hover {
+            background-color: #e5e7eb;
+        }
+        .lang-button.active {
+            background-color: #e0e7ff;
+            border-color: #a5b4fc;
+            color: #3730a3;
+            cursor: default;
+        }
+
         /* Tooltip style */
         .tooltip { position: relative; display: inline-block; }
         .tooltip .tooltiptext { visibility: hidden; width: 60px; background-color: #555; color: #fff; text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -30px; opacity: 0; transition: opacity 0.3s; font-size: 10px; }
@@ -39,20 +62,7 @@
         .swiper-slide.share-image-slide img { max-height: none; object-fit: contain; }
         .swiper-button-next, .swiper-button-prev { color: #fff; background-color: rgba(0,0,0,0.3); padding: 10px; border-radius: 50%; width: 40px; height: 40px; } .swiper-button-next::after, .swiper-button-prev::after { font-size: 1.2rem; }
         /* --- MODIFIED: Adjust Swiper Pagination Position --- */
-        .swiper-pagination {
-            position: absolute;
-            bottom: 10px !important; /* Move higher from the absolute bottom edge */
-            left: 50%;
-            transform: translateX(-50%);
-            width: auto;
-            z-index: 10;
-             /* Add a semi-transparent background for better visibility on images */
-             background-color: rgba(0, 0, 0, 0.2);
-             padding: 2px 5px;
-             border-radius: 10px;
-        }
-        .swiper-pagination-bullet { background-color: rgba(255, 255, 255, 0.5); opacity: 1; width: 6px; height: 6px; margin: 0 3px !important; } /* Smaller bullets */
-        .swiper-pagination-bullet-active { background: #FFFFFF; }
+        .swiper-pagination { display: none !important; }
         /* --- End Modified Swiper Pagination --- */
         .thumbnail-swiper .swiper-slide { width: 60px !important; height: 80px; opacity: 0.6; cursor: pointer; border: 2px solid transparent; transition: opacity 0.3s, border-color 0.3s; }
         .thumbnail-swiper .swiper-slide img { object-fit: cover; width: 100%; height: 100%;}
@@ -139,7 +149,7 @@
 <body class="bg-gray-100 font-sans antialiased text-gray-800">
     <div class="px-4 sm:px-6 lg:px-8 pt-4">
         <div class="mx-auto max-w-7xl">
-            <div data-include-nav data-active="history" data-language="switcher"></div>
+            <div data-include-nav data-active="history" data-language="flags"></div>
         </div>
     </div>
     <div class="max-w-6xl mx-auto p-4 md:p-8 relative">
@@ -502,34 +512,44 @@
         }
 
 
-        function setupLanguageSwitcher() {
-            // Setup language dropdown
-            const switcher = document.getElementById('language-switcher');
-            if (!switcher) return;
+        function renderLanguageSwitcher() {
+            const container = document.getElementById('language-flags');
+            if (!container || !i18next.isInitialized) return;
+            container.innerHTML = '';
+            const languages = ['zh', 'en', 'es'];
             const currentLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
-            switcher.value = ['zh', 'en', 'es'].includes(currentLang) ? currentLang : 'zh';
-            switcher.addEventListener('change', async (e) => {
-                const newLang = e.target.value;
-                await i18next.changeLanguage(newLang);
-                updateContent(); // Update static text
-                // Re-render dynamic content that depends on language
-                renderLoginStatus(currentAuthUser);
-                if (resultsData) {
-                    renderPageContent(resultsData); // Re-render main content with new language
-                    // Re-populate share card and QR before potential regeneration
-                    populateShareCard(resultsData);
-                    generateQRCode();
-                    renderCommentsSection();
-                    updateCommentFormState();
-                    // Optionally regenerate share image on language change if needed
-                    // shareImageGenerated = false; // Reset flag to allow regeneration
-                    // tryAutoGenerateShareImage(); // Try generating again
-                }
+
+            languages.forEach(lang => {
+                const button = document.createElement('button');
+                button.textContent = lang.toUpperCase();
+                button.className = `lang-button ${lang === currentLang ? 'active' : ''}`;
+                button.dataset.lang = lang;
+                button.onclick = async (e) => {
+                    const newLang = e.target.dataset.lang;
+                    const oldLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
+                    if (newLang === oldLang) return;
+                    try {
+                        await i18next.changeLanguage(newLang);
+                        updateContent();
+                        renderLanguageSwitcher();
+                        renderLoginStatus(currentAuthUser);
+                        if (resultsData) {
+                            renderPageContent(resultsData);
+                            populateShareCard(resultsData);
+                            generateQRCode();
+                            renderCommentsSection();
+                            updateCommentFormState();
+                        }
+                    } catch (langErr) {
+                        console.error(`Failed to change language to ${newLang}:`, langErr);
+                    }
+                };
+                container.appendChild(button);
             });
         }
 
         document.addEventListener('navbar:loaded', () => {
-            setupLanguageSwitcher();
+            renderLanguageSwitcher();
             renderLoginStatus(currentAuthUser);
         });
 
@@ -1468,7 +1488,7 @@
                  let user = code ? await handleOidcCallback(code) : await validateSessionAndGetUser();
                  currentAuthUser = user;
                  renderLoginStatus(currentAuthUser);
-                 setupLanguageSwitcher();
+                 renderLanguageSwitcher();
                  bindCommentFormEvents();
                  updateCommentFormState();
 
